# MoltenEngine

./: .gitignore  CMakeLists.txt  README.md
docs/: Architecture.md
game/: Game.cpp  Game.hpp  GameUI.cpp  GameUI.hpp
scenes/: test.scene.json
src/: Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  EngineContext.cpp  EngineContext.hpp  Entity.cpp  Entity.hpp  MemoryDebug.cpp  MemoryDebug.hpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  ObjLoader.cpp  ObjLoader.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  ShaderSource.cpp  ShaderSource.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  Transform.cpp  Transform.hpp  Triangle.cpp  Triangle.hpp  main.cpp
src/message/: AddLightMessage.cpp  AddLightMessage.hpp  CreateEntityMessage.cpp  CreateEntityMessage.hpp  DeleteEntityMessage.cpp  DeleteEntityMessage.hpp  DeleteLightMessage.cpp  DeleteLightMessage.hpp  FileDroppedMessage.cpp  FileDroppedMessage.hpp  ImportMeshMessage.cpp  ImportMeshMessage.hpp  ImportTextureMessage.cpp  ImportTextureMessage.hpp  LoadSceneMessage.cpp  LoadSceneMessage.hpp  Message.cpp  Message.hpp  MessageQueue.cpp  MessageQueue.hpp  SaveSceneMessage.cpp  SaveSceneMessage.hpp  SceneSerializer.cpp  SceneSerializer.hpp  SetEntityAlbedoMessage.cpp  SetEntityAlbedoMessage.hpp  SetEntityMeshMessage.cpp  SetEntityMeshMessage.hpp  SetEntityShininessMessage.cpp  SetEntityShininessMessage.hpp  SetEntitySpecularMessage.cpp  SetEntitySpecularMessage.hpp  SetEntityTextureMessage.cpp  SetEntityTextureMessage.hpp  SetMipmapsEnabledMessage.cpp  SetMipmapsEnabledMessage.hpp  SetShadowsEnabledMessage.cpp  SetShadowsEnabledMessage.hpp  StartGameMessage.cpp  StartGameMessage.hpp  (+4 more)
src/ui/: EditorStyle.cpp  EditorStyle.hpp  EditorWidgets.cpp  UIManager.cpp  UIManager.hpp
